# src/server.js
@@ -7,7 +7,7 @@ import fs from 'fs';
 import taskRoutes from './routes/taskRoutes.js';
 
 const app = express();
-const PORT = process.env.PORT || 3000;
+const PORT = process.env.PORT || 8080;
 app.use(cors());
 app.use(express.json());
 app.use(morgan('tiny'));
